Details
-
Bug
-
Resolution: Fixed
-
Trivial
-
None
Description
https://git.reactos.org/?p=reactos.git&a=search&h=HEAD&st=grep&s=%3B%3B
reactos/boot/environ/lib/mm/pagealloc.c
1471 Request.Flags = 0;;
reactos/dll/3rdparty/libxslt/preproc.c
233 size = sizeof(xsltStyleItemValueOf); break;;
reactos/dll/directx/msvidctl/tuningspace_container.cpp
208 return TuningSpace->get_FriendlyName(&NewIndex->bstrVal);;
reactos/dll/opengl/glu32/src/libnurbs/internals/bufpool.h
112 nextfree -= buffersize;;
reactos/dll/win32/comctl32/button.c
1506 rtext.right -= checkBoxWidth + text_offset;;
1511 rtext.left += checkBoxWidth + text_offset;;
reactos/dll/win32/shell32/COpenWithMenu.cpp
114 WCHAR wszName[256], wszBuf[100];;
reactos/dll/opengl/mesa/math/m_debug_norm.c
168 scale = lengths[i];;
reactos/dll/opengl/mesa/main/texparam.c
725 break;;
728 break;;
731 break;;
734 break;;
737 break;;
750 break;;
753 break;;