[BOOT][DIRECTX][SHELL32] Unneeded semicolons (trivial) (#3133)

Except in 3rd-party code.
CORE-13162